# uv-docker-boilerplate

./: README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  dependabot.yml  pr.yml
