[project]
name = "uv-boilerplate"
version = "0.1.0"
description = "Python uv boilerplate"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Jasmeet Gujral", email = "gujralsam@gmail.com" },
  { name = "Jaroslav Henner", email = "jaroslav.henner@gmail.com" },
]

homepage = "https://github.com/JasGujral/uv-boilerplate#readme"
repository = "https://github.com/JasGujral/uv-boilerplate"

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "docformatter>=1.7.5",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "prettier>=0.0.7",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.6",
    "python-json-logger>=2.0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = [
    "--import-mode=importlib",
    "-vvv",
]
pythonpath = [
  "src",
]

[tool.ruff]
extend-exclude = [
  "build",
  "dist",
]
target-version = "py313"
line-length = 90
src = ["src", "tests"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]
